Realizando uma compra online

--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "scripts": {"db:init": "npx typeorm migration:run -d src/database/data-source.ts"},
+  "scripts": {"db:init": "npx typeorm migration:run -d src/database/data-source.ts",
+"codegen": "npx playwright codegen"},
   "keywords": [],
   "author": "",
   "license": "ISC",
